@@ -2,8 +2,8 @@
  *
  * STATUS.C -  Nagios Status CGI
  *
- * Copyright (c) 1999-2009 Ethan Galstad (egalstad@nagios.org)
- * Last Modified: 07-03-2009
+ * Copyright (c) 1999-2010  Ethan Galstad (egalstad@nagios.org)
+ * Last Modified: 08-05-2020
  *
  * License:
  * 
@@ -1011,18 +1011,18 @@ void show_host_status_totals(void){
 		if(display_type==DISPLAY_HOSTS && (show_all_hosts==TRUE || !strcmp(host_name,temp_hoststatus->host_name)))
 			count_host=1;
 		else if(display_type==DISPLAY_SERVICEGROUPS){
-			if(show_all_servicegroups==TRUE)
+			if(show_all_servicegroups==TRUE){
 				count_host=1;
+				}
 			else{
+
 				for(temp_servicestatus=servicestatus_list;temp_servicestatus!=NULL;temp_servicestatus=temp_servicestatus->next){
-					if(strcmp(temp_servicestatus->host_name,temp_hoststatus->host_name))
-						continue;
-					temp_service=find_service(temp_servicestatus->host_name,temp_servicestatus->description);
-					if(is_authorized_for_service(temp_service,&current_authdata)==FALSE)
-						continue;
-					count_host=1;
-					break;
+					if(is_host_member_of_servicegroup(find_servicegroup(servicegroup_name),temp_host)==TRUE){
+						count_host=1;
+						break;
+						}
 				        }
+
 			        }
 		        }
 		else if(display_type==DISPLAY_HOSTGROUPS && (show_all_hostgroups==TRUE || (is_host_member_of_hostgroup(find_hostgroup(hostgroup_name),temp_host)==TRUE)))
