@@ -25,6 +25,7 @@ FIXES
 * Fix for non-scheduled hosts and services not being updated in NDOUtils
 * Fix for typos in TAC, CMD CGIs (bugs #150, #144, #148)
 * Fix for types in documentation (bugs #145)
+* Fix for incorrect host state counts in status CGI when viewing servicegroups (bug #72)
 
 WARNINGS
 
